[gd_scene load_steps=8 format=3 uid="uid://yfhy1vvfa4fr"]

[ext_resource type="Script" path="res://source/gameplay/game.gd" id="1_2mo45"]
[ext_resource type="PackedScene" uid="uid://b2uo3xa03nmca" path="res://source/map/map_1.tscn" id="1_n7v8k"]
[ext_resource type="PackedScene" uid="uid://b5gtexi7ngrr5" path="res://source/user_interface/score_panel.tscn" id="3_034fg"]
[ext_resource type="PackedScene" uid="uid://22dru0smh81w" path="res://source/user_interface/death_panel.tscn" id="3_c3h1r"]
[ext_resource type="PackedScene" uid="uid://d213e4dimovxf" path="res://source/user_interface/health_panel.tscn" id="3_ddk7r"]
[ext_resource type="PackedScene" uid="uid://2ixjt4ngdntq" path="res://source/user_interface/message_box.tscn" id="6_kjssh"]
[ext_resource type="PackedScene" uid="uid://maj2f5qn4sth" path="res://source/user_interface/pause_menu_panel.tscn" id="7_j3626"]

[node name="game" type="Node3D"]
script = ExtResource("1_2mo45")

[node name="map" type="Node3D" parent="."]

[node name="map_1" parent="map" instance=ExtResource("1_n7v8k")]

[node name="hud" type="CanvasLayer" parent="."]

[node name="user_interface" type="Control" parent="hud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="health_panel" parent="hud/user_interface" instance=ExtResource("3_ddk7r")]
layout_mode = 1
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_right = 192.0
offset_bottom = 40.0
grow_vertical = 1

[node name="death_panel" parent="hud/user_interface" instance=ExtResource("3_c3h1r")]
layout_mode = 1

[node name="kill_feed" type="VBoxContainer" parent="hud/user_interface"]
custom_minimum_size = Vector2(480, 144)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 144.0
grow_horizontal = 0

[node name="score_panel" parent="hud/user_interface" instance=ExtResource("3_034fg")]
layout_mode = 1
offset_top = -220.0
offset_bottom = 220.0

[node name="message_box" parent="hud/user_interface" instance=ExtResource("6_kjssh")]
layout_mode = 1

[node name="pause_menu_panel" parent="hud/user_interface" instance=ExtResource("7_j3626")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -96.0
offset_right = 240.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="respawn_timer" type="Timer" parent="."]
